--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,10 @@
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             </div>
+            <div id="post">
+                <h1>Este es el otro título atractivo e interesante del segundo post</h1>
+                <p>Blah blah blah blah blah blah</p>
+            </div>
         </div>
     </body>
 </html>
