Camios en el color de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">
+            <div id="cabecera" style="background-color: rgba(86, 155, 229, 0.732);">
                 Cabecera
             </div>
             <div id="post">
